update placeholder text

--- a/LOTAWeb/Areas/Admin/Views/Course/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Course/Index.cshtml
@@ -83,7 +83,7 @@
                                             <i class="fas fa-search text-muted"></i>
                                         </span>
                                         <input type="text" class="form-control border-start-0" name="searchTerm" id="searchInput" 
-                                               placeholder="Search courses..." value="@ViewBag.SearchTerm">
+                                               placeholder="name or code..." value="@ViewBag.SearchTerm">
                                         <button type="submit" class="btn btn-outline-secondary border-start-0" title="Search">
                                             <i class="fas fa-search"></i>
                                         </button>
