--- a/LOTAWeb/Areas/Admin/Views/Tutor/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Tutor/Index.cshtml
@@ -53,8 +53,8 @@
                                  <span class="input-group-text bg-light border-end-0">
                                      <i class="fas fa-search text-muted"></i>
                                  </span>
-                                 <input type="text" class="form-control border-start-0" name="searchTerm" id="searchInput" 
-                                        placeholder="Search tutors..." value="@ViewBag.SearchTerm">
+                                 <input type="text" class="form-control border-start-0" name="searchTerm" id="searchInput"
+                                       placeholder="name or email..." value="@ViewBag.SearchTerm">
                                  <button type="submit" class="btn btn-outline-secondary border-start-0" title="Search">
                                      <i class="fas fa-search"></i>
                                  </button>
