--- a/LOTAWeb/Areas/Admin/Views/Student/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Student/Index.cshtml
@@ -54,7 +54,7 @@
                                     <i class="fas fa-search text-muted"></i>
                                 </span>
                                 <input type="text" class="form-control border-start-0" name="searchTerm" id="searchInput" 
-                                       placeholder="Search students..." value="@ViewBag.SearchTerm">
+                                       placeholder="ID, name or email..." value="@ViewBag.SearchTerm">
                                 <button type="submit" class="btn btn-outline-secondary border-start-0" title="Search">
                                     <i class="fas fa-search"></i>
                                 </button>
