--- a/LOTAWeb/Areas/Admin/Views/Trimester/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Trimester/Index.cshtml
@@ -113,7 +113,7 @@
                                     <i class="fas fa-search text-muted"></i>
                                 </span>
                                 <input type="text" class="form-control border-start-0" name="searchTerm" id="searchInput" 
-                                       placeholder="Search trimesters..." value="@ViewBag.SearchTerm">
+                                       placeholder="academic year..." value="@ViewBag.SearchTerm">
                                 <button type="submit" class="btn btn-outline-secondary border-start-0" title="Search">
                                     <i class="fas fa-search"></i>
                                 </button>
